--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -4,7 +4,7 @@
 
  # Optional
  music_directory    "~/Music"
- playlist_directory "~/.config/mpd/playlists"
+ playlist_directory "~/Music/_creamy/playlists/"
  pid_file           "~/.config/mpd/pid"
  state_file         "~/.config/mpd/state"
  sticker_file       "~/.config/mpd/sticker.sql"
@@ -12,8 +12,8 @@
 audio_output {
 	type		"pulse"
 	name		"My Pulse Device"
-#	type		"alsa"
-#	name		"My ALSA Device"
+#type		"alsa"
+#name		"My ALSA Device"
 	#device		"hw:0,0"	# optional
 	#mixer_type      "hardware"	# optional
 	#mixer_device	"default"	# optional
