--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -24,7 +24,8 @@ nmap ,,w :source ~/.config/vimb/config<CR>
 nmap ,,o :sh /bin/sh -c "xdg-open ~/downloads/\$(ls -1 -t ~/downloads/ | head -1)"<CR>
 nmap ,,D :sh /bin/sh -c "rm ~/downloads/\$(ls -1 -t ~/downloads/ | head -1)"<CR>
 #nmap ,;b ::e! bookmarkFileToHtml('file:///home/david/.config/vimb/bookmark')<CR>
-nmap ,,b :bma archive<CR>
+nmap ,,b ::e! shaarli()<CR>::bma archive<CR>
+nmap ,,r ::e! tinytinyrss()<CR>
 nmap ,;b :o ./.config/vimb/bookmark<CR>
 nmap ,,; ::sh! ~/share/bin/vimbmkpwd<CR>
 
@@ -45,7 +46,7 @@ nmap ,tl :tabopen http://trefle.pole-emploi.local/explorer/index.html<CR>
 nmap ,tr :tabopen http://trefle.beta.pole-emploi.fr<CR>
 nmap ,tp :tabopen http://trefle.pole-emploi.fr<CR>
 
-nmap <Tab> :shell quickswitch -c Vimb -d "dmenu -l 20 -b -i -nb '#002b36' -nf '#839496' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 12"<CR>
+nmap <Space> :shell quickswitch -c Vimb -d "dmenu -l 20 -b -i -nb '#002b36' -nf '#839496' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 12"<CR>
 
 #set proxy=true
 nmap ,,p :o http://config.privoxy.org/toggle<CR>
@@ -88,3 +89,4 @@ set status-css=color:#839496;background-color:#002b36;font:10pt DejaVu Sans Mono
 set status-ssl-css=color:#839496;background-color:#002b36;font:10pt DejaVu Sans Mono;
 set status-ssl-invalid-css=color:#f2777a;background-color:#002b36;font:10pt DejaVu Sans Mono;
 
+# TODO: a command to subscribe to a rss feed with : https://example.com/tt-rss/public.php?op=subscribe&feed_url=%s%EF%BB%BF
