--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Session.vim
 !.config/newsbeuter/solarized-dark
 !.config/newsbeuter/urls
 !.config/rtv/rtv.cfg
+!.config/systemd
 !.config/termite
 !.config/tig
 !.config/todo
