--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ Session.vim
 !.config/newsbeuter/urls
 !.config/rtv/rtv.cfg
 !.config/systemd
+.config/systemd/**/*.wants
 !.config/termite
 !.config/tig
 !.config/todo
