Add P to pull + add picom conf to not ignore

--- a/.config/tig/config
+++ b/.config/tig/config
@@ -22,3 +22,7 @@ bind refs R !git rebase -i %(branch)
 
 #add/edit notes for the current commit used during a review
 bind generic T !git notes edit %(commit)
+
+#rebase on top of selected branch
+bind refs P !git pull
+
