--- a/.config/i3/config
+++ b/.config/i3/config
@@ -143,6 +143,7 @@ set $menu5 5:
 set $menu6 6:<span font=\"icomoon 13\"></span>
 set $menu7 7:
 set $menu8 8:
+set $menu10 10: PE
 
 
 # switch to workspace
@@ -159,7 +160,7 @@ bindsym $mod+7 workspace $menu7; exec ~/share/bin/i3/photos
 #bindsym $mod+7 workspace $menu7; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+0 workspace $menu10; exec [ $( ps -eo cmd | grep -c '^/usr/bin/evolution' ) -eq 0 ] && /usr/bin/evolution; move workspace to output $screen2
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $menu1
@@ -225,10 +226,14 @@ for_window [class="w_float"] floating enable
 
 #large et small window popup
 set $float_largeW_app Gpodder|Mpsyt|Modem-manager-gui|Nm-connection-editor|Mattermost
-set $float_smallW_app Pavucontrol|Blueberry.py
 for_window [class="$float_largeW_app"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable
+
 #small window with no title bar (keep it small)
+set $float_smallW_app Pavucontrol|Blueberry.py|Pick-colour-picker
 for_window [class="$float_smallW_app"] floating enable, resize set $wfM_width $wfM_height, move position center, border 1pixel, sticky enable
+
+#second screen
+for_window [class="Caprine|Evolution|Slack|Teams|Brave-browser"] output $screen2
 
 # applications
 for_window [class="Vimb"] border 1pixel, focus
@@ -240,7 +245,7 @@ for_window [title="filemanager"] border 1pixel, layout tabbed
 for_window [title="JACK.*"] floating enable
 for_window [title="Molotov"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
 for_window [class="Deezer"] floating enable, border 1pixel, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
-for_window [class="Caprine"] floating enable, resize set $wfL_width $wfL_height, border 1pixel, sticky enable, output $screen2;
+for_window [class="Caprine"] floating enable, resize set $wfL_width $wfL_height, border 1pixel, sticky enable;
 for_window [title="pinentry"] floating enable
 for_window [class="termite_dict"] floating enable, move position center, border 1pixel
 for_window [title="david_adsnovo - Skype*"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout splith;
@@ -259,7 +264,7 @@ assign [class="Pidgin"] pidgin
 for_window [class="Pidgin"] focus
 assign [class="Brave-browser"] $menu5
 assign [class="Shotwell"] $menu7
-assign [class="Evolution"]  PE
+assign [class="Evolution"] $menu10
 assign [class="trefle"] trèfle
 for_window [class="trefle"] output $screen1
 #assign [class="Vimb"] $menu2
@@ -275,8 +280,8 @@ for_window [title="Franz"] sticky enable, border 1pixel, move scratchpad, resize
 for_window [title="scratchpad_ncmpcpp"] sticky enable, border 1pixel, move scratchpad, resize set $wfM_width  $wfM_height, scratchpad show;
 for_window [title="scratchpad_cal"] sticky enable, border 1pixel, move scratchpad, scratchpad show;
 for_window [title="N26"] sticky enable, border 1pixel, move scratchpad, resize set 500 820, scratchpad show, move position center;
-for_window [class="Slack"] sticky enable, border 1pixel, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show, output $screen2;
-for_window [class="Teams"] sticky enable, border 1pixel, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show, output $screen2;
+for_window [class="Slack"] sticky enable, border 1pixel, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show;
+for_window [class="Teams"] sticky enable, border 1pixel, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show;
 for_window [class="VirtualBox Machine"] sticky enable, border 1pixel, move scratchpad, fullscreen, scratchpad show;
 
 client.focused #859900 #859900 #eee8d5 #859900
