--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -11,7 +11,7 @@ nmap D :q<CR>
 nmap H <C-O>
 nmap L <C-I>
 shortcut-add G=https://duckduckgo.com/html/?q=!gifl%20$0
-shortcut-add g=http://search.uselilo.org/searchweb.php?q=$0
+shortcut-add g=http://search.lilo.org/?q=$0
 shortcut-add a=https://duckduckgo.com/html/?q=!gifl%20ansible+$0
 set strict-ssl=false
 
@@ -45,6 +45,9 @@ nmap ;lp ::e! workUrlLbfToProd()<CR>
 nmap ,tl :tabopen http://trefle.pole-emploi.local/explorer/index.html<CR>
 nmap ,tr :tabopen http://trefle.beta.pole-emploi.fr<CR>
 nmap ,tp :tabopen http://trefle.pole-emploi.fr<CR>
+nmap ,gw :tabopen https://wiki.beta.pole-emploi.fr<CR>
+
+nmap <C-U> :sh! vimb_adblock<CR>
 
 nmap <Space> :shell quickswitch -c Vimb -d "dmenu -l 20 -b -i -nb '#002b36' -nf '#839496' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 12"<CR>
 
