--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,10 +51,10 @@ bindsym $mod+n [con_mark="working"] focus
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 36
-bindsym $mod+n exec networkmanager_dmenu -i -nb '#b58900' -nf '#eee8d5' -sb '#002b24' -fn 'MesloLGSDZ Nerd Font-10' -h 36
 bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 36
-bindsym $mod+x exec PASSWORD_STORE_X_SELECTION=secondary passmenu -i -nb '#002b24' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGSDZ Nerd Font-10' -h 36 && xsel -o -s | xdotool type --file -
-bindsym $mod+Shift+x exec "DMENU_HEIGHT=36 passdmenu.py -u -x p,s -P --type -r -D ~/share/bin/mypassdmenu"
+bindsym $mod+x exec "DMENU_HEIGHT=36 passdmenu -G -x s -P --type -r -D ~/share/bin/mypassdmenu"
+#bindsym $mod+x exec PASSWORD_STORE_X_SELECTION=secondary passmenu -i -nb '#002b24' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGSDZ Nerd Font-10' -h 36 && xsel -o -s | xdotool type --file -
+bindsym $mod+Shift+x exec "DMENU_HEIGHT=36 passdmenu -G -u -x p,s -P --type -r -D ~/share/bin/mypassdmenu"
 bindsym $mod+s exec quickswitch -w -d "dmenu -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 36"
 bindsym $mod+Shift+s exec quickswitch -w -j -f -d "dmenu -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 36"
 bindsym $capsLock+Tab exec quickswitch -s -d "dmenu -l 10 -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 36"
@@ -71,7 +71,7 @@ bindsym $mod+i exec dmenu-ssh
 bindsym $mod+Shift+d exec "export D_DICT_DB_OPT='-d english'; ~/share/bin/dict_lookup"
 
 # search for selection on the web
-bindsym $mod+g exec /usr/bin/vimb "$(xclip -o)"
+bindsym $mod+g exec vimb "$(xclip -o)"
 
 focus_follows_mouse no
 
@@ -318,14 +318,19 @@ mode "$i3ctl" {
 }
 
 # resize mod window $mod+r (you can also use the mouse for that)
-bindsym $mod+r mode "resize / move"
-mode "resize / move" {
+bindsym $mod+r mode "resize / move / [s]ticky / [bB]order / [c]enter / [f]loat right corner"
+mode "resize / move / [s]ticky / [bB]order / [c]enter / [f]loat right corner" {
 
     bindsym h resize grow width 10 px or 10 ppt
     bindsym j resize grow height 10 px or 10 ppt
     bindsym k resize shrink height 10 px or 10 ppt
     bindsym l resize shrink width 10 px or 10 ppt
-    bindsym m move position center
+    bindsym s sticky toggle, mode "default"
+    bindsym B border 1pixel, mode "default"
+    bindsym b border normal, mode "default"
+    bindsym f exec python3 -m i3grid snap --target 9 --rows 3 --cols 3, mode "default"
+    #bindsym f floating enable, resize set $wfM_width $wfM_height, border 1pixel, sticky enable, mode "default"
+    bindsym c move position center, mode "default"
 
     # same bindings, but for the arrow keys
     bindsym Left move left 10 px
