--- a/.config/i3/config
+++ b/.config/i3/config
@@ -46,8 +46,8 @@ bindsym $mod+n [con_mark="working"] focus
 bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 24
 bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 24
 #bindsym $mod+x exec PASSWORD_STORE_X_SELECTION=secondary passmenu -i -nb '#002b24' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGSDZ Nerd Font-10' -h 24 && xsel -o -s | xdotool type --file -
-bindsym $mod+x exec "PASSWORD_STORE_GENERATED_LENGTH=20 passdmenu -G -x s -P --type -r -D ~/share/bin/mypassdmenu"
-bindsym $mod+Shift+x exec "PASSWORD_STORE_GENERATED_LENGTH=20 passdmenu -G -u -x p,s -P --type -r -D ~/share/bin/mypassdmenu"
+bindsym $mod+x exec "PASSWORD_STORE_GENERATED_LENGTH=20 passdmenu -G -x s -P -f '^((?!work/jobintree|deprecated).)*$' --type -D ~/share/bin/mypassdmenu"
+bindsym $mod+Shift+x exec "PASSWORD_STORE_GENERATED_LENGTH=20 passdmenu -G -u -x p,s -P -f '^((?!work/jobintree|deprecated).)*$' --type -D ~/share/bin/mypassdmenu"
 bindsym $mod+s exec quickswitch -w -d "dmenu -i -nb '#eee8d5' -nf '#002b24' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 24"
 bindsym $mod+Shift+s exec quickswitch -w -j -f -d "dmenu -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 24"
 bindsym $capsLock+Tab exec quickswitch -s -d "dmenu -l 10 -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 24"
@@ -55,6 +55,8 @@ bindsym $mod+t exec "dict -d fd-eng-fra $(xclip -o) | tail +4 | dmenu -i -nb '#e
 bindsym $mod+Shift+t exec "dict -d fd-fra-eng $(xclip -o) | tail +4 | dmenu -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 24"
 bindsym $mod+y exec dmenu-webnav
 bindsym $mod+i exec dmenu-ssh
+bindsym $capsLock+q exec qrcode
+bindsym $capsLock+c exec cryptoinfoweb
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -175,6 +177,7 @@ bindsym $mod+Shift+0 move container to workspace 10
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
+bindsym $mod+XF86AudioMute exec apptoggle pavucontrol
 bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -i 2 && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 2  && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pamixer -t && $refresh_i3status
@@ -194,11 +197,14 @@ bindsym XF86AudioPlay exec --no-startup-id mpc toggle
 bar {
   #font pango:FuraCode Nerd Font, 10
   font pango:Meslo LG S DZ, forkawesome, icomoon,  10
-  status_command python ~/.config/i3/status.py
+  #status_command python ~/.config/i3/status.py
+  status_command ~/.virtualenvs/i3pystatus/bin/python ~/.config/i3/status.py
   # status_command ~/.virtualenvs/i3pystatus/bin/python ~/.config/i3/status-dev.py
-    position top
+  position top
+  #separator_symbol "┃"
+  separator_symbol "│"
   colors {
-    separator #93a1a1
+    separator #586e75
     background #002b36
     statusline #93a1a1
     focused_workspace #eee8d5 #859900 #eee8d5
@@ -207,7 +213,7 @@ bar {
     urgent_workspace #d33682 #d33682 #fdf6e3
   }
   #separator_symbol " "
-  strip_workspace_numbers yes 
+  strip_workspace_numbers yes
 }
 
 hide_edge_borders both
@@ -234,6 +240,7 @@ for_window [class="$float_largeW_app"] floating enable, resize set $wfL_width $w
 #small window with no title bar (keep it small)
 for_window [class="$float_smallW_app"] floating enable, resize set $wfM_width $wfM_height, move position center, border 1pixel, sticky enable
 for_window [class="$float_borderless_app"]  floating enable, move position center, border 1pixel, sticky enable
+for_window [instance="float_borderless_app"]  floating enable, move position center, border 1pixel, sticky enable
 
 # applications
 for_window [class="Vimb"] border 1pixel, focus
@@ -381,8 +388,8 @@ mode "$mode_filemanager" {
 set $mode_usbmount USB [m]ount or [u]mount
 bindsym $mod+u mode "$mode_usbmount"
 mode "$mode_usbmount" {
-    bindsym m exec zsh -i -c 'udiskie-mount -2ar', mode "default"
-    bindsym u exec zsh -i -c 'udiskie-umount /run/media/*/*', mode "default"
+    bindsym m exec zsh -i -c 'mount-all-devices', mode "default"
+    bindsym u exec zsh -i -c 'udiskie-umount /run/media/*/* && notify-send umount all', mode "default"
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
@@ -455,6 +462,6 @@ bindsym $capsLock+Shift+s exec i3-msg '[class="Teams"] scratchpad show';
 
 # Background image
 # see in xprofile
-# exec --no-startup-id feh
+ exec --no-startup-id blueberry-tray
 
 
