--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -50,3 +50,6 @@ bookmark-cmd "sh ~/share/bin/instaper.sh"
 macro e set browser "echo %u >> ~/.config/vimb/queue" ; open-in-browser ; set browser "xdg-open %u"
 #macro u source "~/.config/newsboat/config" #TOFIX
 #macro y set browser "mpv %u"; open-in-browser ; set browser "xdg-open %u"
+
+auto-reload yes
+reload-time 60
