--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=filename-entry
 ShowHidden=true
 ShowSizeColumn=true
-GeometryX=300
+GeometryX=302
 GeometryY=157
 GeometryWidth=840
 GeometryHeight=630
-SortColumn=modified
+SortColumn=name
 SortOrder=ascending
 StartupMode=recent
